tests/parser/bad/exps/exp_t-spid-lbrace-tid-rbrace-with.scilexp
let a = tfun 'A => fun (x : 'A) => x in
let b = True in
a {Bool} [b]
